Fixes bug with the visibility variable not correctly being tracked when editing a professional or education sectoin entry.

--- a/resumeBuilder/src/App.css
+++ b/resumeBuilder/src/App.css
@@ -698,7 +698,9 @@ padding-inline-start: 40px;
   top: 24px;
 }
 
-
+#newEduExperience {
+  display: none;
+}
 
 .toggle-button {
   display: flex;
